[workspace]
members = ["a", "b"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.lints]

[workspace.dependencies]
# doesn't work
# crabtime = { git = "https://github.com/wdanilo/crabtime" }
# work
crabtime = { git = "https://github.com/mirsella/crabtime", branch = "local-dep" }
a = { path = "./a" }
b = { path = "./b" }
